# tutorlolv2_desktop_app

./: .gitignore  README.md  workspace.code-workspace
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: _lib.rs  kb2.rs  kb3.rs  keyboard.rs  lib.rs  main.rs  realtime.rs
tutorlolv2_frontend/: .gitignore  Cargo.toml  Trunk.toml  build_script.js  index.html  tailwind.config.js
tutorlolv2_frontend/generated_code/: Cargo.toml
tutorlolv2_frontend/generated_code/src/: cache.rs  lib.rs
tutorlolv2_frontend/public/: calculator.js  fonts.css  highliter.css  invoke.js  lazy.js  main.css  tailwind.js
tutorlolv2_frontend/src/: context.rs  macros.rs  main.rs  model_v2.rs  utils.rs
tutorlolv2_frontend/src/build_imports/: brotli.rs  code.rs  mod.rs
tutorlolv2_frontend/src/calculator_v2/: ability_selector.rs  active_player.rs  enemy_players.rs  mod.rs  page.rs  reducer.rs
tutorlolv2_frontend/src/components/: champion_selector.rs  docs.rs  dropdown.rs  image.rs  mod.rs  selector.rs  sidebar.rs  sprite.rs  u32_selector.rs
tutorlolv2_frontend/src/components/calculator/: ability_selector.rs  calculator_utils.rs  champion_banner.rs  champion_selector.rs  damage_stack.rs  exception_selector.rs  item_selector.rs  main_selector.rs  mod.rs  monsters_table.rs  rune_selector.rs  static_selector.rs  stats_selector.rs  tray.rs  turret_table.rs
tutorlolv2_frontend/src/components/formulas/: formula_sidebar.rs  mod.rs  source_code.rs
tutorlolv2_frontend/src/components/hover/: docs.rs  item_stats.rs  mod.rs
tutorlolv2_frontend/src/components/tables/: base.rs  mod.rs
tutorlolv2_frontend/src/components/tables/cells/: damage.rs  image.rs  mod.rs
tutorlolv2_frontend/src/components_v2/: base_table.rs  mod.rs
tutorlolv2_frontend/src/hooks/: mod.rs  mouseout.rs
tutorlolv2_frontend/src/models/: base.rs  calculator.rs  mod.rs  realtime.rs  shared.rs
tutorlolv2_frontend/src/overlay/: mod.rs  process1.rs  process2.rs  realtime.rs
tutorlolv2_frontend/src/pages/: calculator.rs  formulas.rs  help.rs  history.rs  home.rs  mod.rs  realtime.rs  settings.rs
tutorlolv2_frontend/src/utils/: api.rs  brotli.rs  extensions.rs  mod.rs  random.rs
tutorlolv2_frontend/tutorlolv2_imports/: Cargo.toml
tutorlolv2_frontend/tutorlolv2_imports/src/: cache.rs  lib.rs
