[package]
name = "tutorlolv2_frontend"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
reqwasm = { version = "0.5.0", default-features = false, features = ["http"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
rustc-hash = "2.1.1"
once_cell = "1.21.3"
web-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
gloo-timers = "0.3.0"
