[package]
name = "tutorlolv2_frontend"
version = "0.2.5"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false

[dependencies]
generated_code = { path = "generated_code" }
bincode = { version = "2.0.1" }
reqwasm = { version = "0.5.0", default-features = false, features = ["http"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
web-sys = { version = "0.3.77", features = [
    "AbortController",
    "HtmlSelectElement",
] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
gloo-timers = "0.3.0"
paste = "1.0.15"
brotli = "8.0.2"
