[package]
name = "tutorlolv2_frontend"
version = "0.2.5"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false

[dependencies]
tutorlolv2_imports = { path = "tutorlolv2_imports" }
bincode = "2.0.1"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
web-sys = { version = "0.3.78", features = ["AbortController"] }
wasm-bindgen = "0.2.101"
gloo-timers = "0.3.0"
paste = "1.0.15"
brotli = "8.0.2"
gloo-net = { version = "0.6.0", default-features = false, features = ["http"] }
